--- a/src/mint/react/components/Item/Item.scss
+++ b/src/mint/react/components/Item/Item.scss
@@ -5,20 +5,13 @@
   overflow-x: hidden;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
+  font: $main-font;
+  text-align: left;
   &:after {
     content: '';
     height: 30vh;
     width: 100vw;
     display: inline-block;
-  }
-  .item__transition {
-    position: relative;
-  }
-  .item__transition > div {
-    display: inline-block;
-    position: absolute;
-    width: 100%;
-    left: 0;
   }
   div[class^='item__view'] {
     margin-bottom: $padding;
@@ -46,8 +39,7 @@
     font-size: 13px;
   }
   div[class$='view__price'] {
-    h4,
-    h5 {
+    h4, h5 {
       padding: 1px;
       margin: 5px;
     }
@@ -83,8 +75,7 @@
         font-family: Arial, sans-serif;
         border: 2px solid $kip-faded-color;
       }
-      button,
-      .item__view__quantity__placeholder {
+      button, .item__view__quantity__placeholder {
         height: 100%;
         margin: 0 $padding/2;
         background: white;
@@ -121,12 +112,28 @@
     }
   }
   .item__view__review {
-    color: #999;
+    color: $header-color;
+    background-color: white;
+    border-top: 1px solid $border-color-light;
+    border-bottom: 1px solid $border-color-light;
+    font-style: italic;
+    margin: 0 -20px;
+    padding: 20px;
     p {
-      font-size: 13px;
+      font-size: 14px;
     }
     em {
-      font-size: 11px;
+      font-size: 12px;
+    }
+  }
+  .item__view__amazon__link {
+    color: $kip-faded-color;
+    font-size: 12px;
+    position: relative;
+    top: 10px;
+    &:hover {
+      color: $header-color;
     }
   }
 }
+
